# bundle-ai

./: .env  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  .mypy.ini  .ruff.toml  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: main.py
backend/app/api/routers/: agents.py  chat.py
backend/app/core/: utils.py
backend/app/core/agents/: __init__.py  base_agent.py  orchestrator_agent.py  planning_agent.py  registry.py  retrieval_agent.py
backend/app/core/tools/: __init__.py  web_search.py
backend/app/schemas/: agent.py  chat.py
frontend/: .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessages.tsx
frontend/src/components/layout/: Sidebar.tsx  SidebarItem.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/utils/: api.ts
