[project]
name = "bundle-ai-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vo Nguyen Dang"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.11",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]
